--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "haykam821",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^2.4.1",
     "discord.js": "^11.3.2",
     "fs-extra": "^6.0.1"
   }
