--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "discord.js": "^11.3.2",
-    "fs-extra": "^6.0.1"
+    "fs-extra": "^6.0.1",
+    "yargs": "^11.0.0"
   }
 }
