--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "discord.js": "^11.3.2",
     "fs-extra": "^6.0.1",
     "yargs": "^11.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1"
   }
 }
