--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "yargs": "^11.0.0"
   },
   "devDependencies": {
-    "eslint": "^4.19.1"
+    "eslint": "^4.19.1",
+    "jsdoc": "^3.5.5"
   }
 }
