--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "A fully-featured channel dumper for Discord.",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"docs": "jsdoc index.js --configure .jsdoc.json"
 	},
 	"keywords": [
 		"discord",
@@ -23,7 +24,8 @@
 	},
 	"devDependencies": {
 		"eslint": "^4.19.1",
-		"jsdoc": "^3.5.5"
+		"jsdoc": "^3.5.5",
+		"minami": "^1.2.3"
 	},
 	"repository": {
 		"type": "git",
