--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,10 @@
 		"handle-callback-err": "off",
 		"indent": [
 			"error",
-			"tab"
+			"tab",
+			{
+				"SwitchCase": 1
+			}
 		],
 		"max-nested-callbacks": [
 			"error",
