--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"chalk": "^2.4.1",
 		"discord.js": "^11.3.2",
 		"fs-extra": "^6.0.1",
+		"os-locale": "^2.1.0",
 		"yargs": "^11.0.0"
 	},
 	"devDependencies": {
