--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
 		"caporal": "^1.2.0",
 		"chalk": "^2.4.1",
 		"discord.js": "^11.3.2",
-		"fs-extra": "^6.0.1",
-		"os-locale": "^2.1.0"
+		"fs-extra": "^6.0.1"
 	},
 	"devDependencies": {
 		"eslint": "^4.19.1",
