--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"caporal": "^1.2.0",
 		"chalk": "^2.4.1",
 		"discord.js": "^11.3.2",
-		"fs-extra": "^6.0.1"
+		"fs-extra": "^6.0.1",
+		"open": "^6.3.0"
 	},
 	"devDependencies": {
 		"eslint": "^4.19.1",
