--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
 		"open": "^6.3.0"
 	},
 	"devDependencies": {
-		"eslint": "^4.19.1",
-		"eslint-config-haykam": "^1.0.0",
+		"eslint": "^5.16.0",
+		"eslint-config-haykam": "^1.6.0",
+		"eslint-plugin-extra-rules": "^0.8.1",
+		"eslint-plugin-html": "^5.0.5",
+		"eslint-plugin-json": "^1.4.0",
+		"eslint-plugin-markdown": "^1.0.0",
+		"eslint-plugin-unicorn": "^8.0.2",
 		"jsdoc": "^3.5.5",
 		"minami": "^1.2.3"
 	},
