--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
 		"open": "^6.3.0"
 	},
 	"devDependencies": {
-		"eslint": "^5.16.0",
-		"eslint-config-haykam": "^1.7.0",
-		"eslint-plugin-extra-rules": "0.0.0-development",
-		"eslint-plugin-html": "^5.0.5",
-		"eslint-plugin-json": "^1.4.0",
-		"eslint-plugin-markdown": "^1.0.0",
-		"eslint-plugin-unicorn": "^9.1.1",
+		"eslint": "^7.28.0",
+		"eslint-config-haykam": "^1.10.0",
+		"eslint-plugin-extra-rules": "^0.0.0-development",
+		"eslint-plugin-html": "^6.1.2",
+		"eslint-plugin-jsdoc": "^32.3.4",
+		"eslint-plugin-json": "^2.1.2",
+		"eslint-plugin-markdown": "^2.2.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-unicorn": "^28.0.2",
 		"jsdoc": "^3.5.5",
 		"minami": "^1.2.3"
 	},
